small fix in the layout component so it doesnt show a white space at the end if the month isn't long enoungh

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -17,6 +17,7 @@
     justify-content: center;
     align-items: center;
     background-color: #75c8ff;
+    min-height: 100vh;
 }
 
 .footer-container{
